fix(OpenClawAgentController): fix PATCH endpoint path variable pattern for filenames with dots